# VisualSpyViewer

./: .gitignore  LICENSE.md  README.md
Assets/: DefaultVolumeProfile.asset  MainScene.unity  Managers.prefab  Universal Render Pipeline Asset.asset  UniversalRenderPipelineGlobalSettings.asset
Assets/ControllerVisualizer/: ControllerState.cs
Assets/ControllerVisualizer/SwitchControllerProtocolReceiver/: SwitchControllerProtocolReceiver.cs
Assets/ControllerVisualizerAndManagerForUnity/: ControllerManager.cs
Assets/KeyInputLogVisualizer/: KeyInputLogVisualizer.cs  KeyInputVisual.cs  controller-visualizer.key-input-logger.asmdef
Assets/KeyInputLogger/: KeyLogger.cs  controller-visualizer.key-input-logger.asmdef
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Assets/SwitchControllerProtocolReceiver/: SerialPortReceiver.cs  SwitchControllerExtension.cs  SwitchControllerProtocolReceiver.cs
Assets/SwitchControllerProtocolReceiverManagerForUnity/: SwitchControllerProtocolReceiverManager.cs  controller-visualizer.switch.receiver.manager.asmdef
Assets/SwitchControllerVisualizer/: AccGyroParser.cs  ProtocolDeserializer.cs  SerialPortReceiver.cs  TestMonoB.cs  WS.unity
Assets/SwitchProconVisualizer/: Procon-Material.mat  Procon.blend  Procon.fbx  ProconVisualizer.cs  SwitchProcon.prefab
Assets/joycon-quat-bin/: JoyconQuat.g.cs
Assets/joycon-quat~/: Cargo.toml  build.rs
Assets/joycon-quat~/src/: bilge_util.rs  lib.rs  types.rs
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset
(+27 files in other folders)
