[package]
name = "joycon-quat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bilge = "0.2"
bitvec = "1.0"
fixed = "1.23"
fixed-sqrt = "0.2"
#fixed-macro = "1.2"
az = "1.2"
arraytools = "0.1"
nalgebra = { version = "0.32", features = ["rand"]}
rand = "0.8"

# [patch.crates-io]
# bilge = { path = "../bilge" }
# bilge-impl = { path = "../bilge/bilge-impl" }

[build-dependencies]
csbindgen = "1.8.0"
